--- a/contrib/other-builds/moses/.project
+++ b/contrib/other-builds/moses/.project
@@ -1972,14 +1972,14 @@
 			<locationURI>PARENT-3-PROJECT_LOC/moses/FF/OSM-Feature/osmHyp.h</locationURI>
 		</link>
 		<link>
-			<name>LM/oxlm/LBLLM2.cpp</name>
+			<name>LM/oxlm/LBLLM.cpp</name>
 			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/LM/oxlm/LBLLM2.cpp</locationURI>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/LM/oxlm/LBLLM.cpp</locationURI>
 		</link>
 		<link>
-			<name>LM/oxlm/LBLLM2.h</name>
+			<name>LM/oxlm/LBLLM.h</name>
 			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/LM/oxlm/LBLLM2.h</locationURI>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/LM/oxlm/LBLLM.h</locationURI>
 		</link>
 		<link>
 			<name>LM/oxlm/Mapper.cpp</name>
