--- a/contrib/other-builds/moses/.project
+++ b/contrib/other-builds/moses/.project
@@ -1467,11 +1467,6 @@
 			<locationURI>PARENT-3-PROJECT_LOC/moses/FF/WordTranslationFeature.h</locationURI>
 		</link>
 		<link>
-			<name>FF/bilingual-lm</name>
-			<type>2</type>
-			<locationURI>virtual:/virtual</locationURI>
-		</link>
-		<link>
 			<name>LM/Backward.cpp</name>
 			<type>1</type>
 			<locationURI>PARENT-3-PROJECT_LOC/moses/LM/Backward.cpp</locationURI>
@@ -1675,6 +1670,11 @@
 			<name>LM/backward.arpa</name>
 			<type>1</type>
 			<locationURI>PARENT-3-PROJECT_LOC/moses/LM/backward.arpa</locationURI>
+		</link>
+		<link>
+			<name>LM/bilingual-lm</name>
+			<type>2</type>
+			<locationURI>virtual:/virtual</locationURI>
 		</link>
 		<link>
 			<name>LM/oxlm</name>
@@ -2032,14 +2032,14 @@
 			<locationURI>PARENT-3-PROJECT_LOC/moses/FF/OSM-Feature/osmHyp.h</locationURI>
 		</link>
 		<link>
-			<name>FF/bilingual-lm/BilingualLM.cpp</name>
+			<name>LM/bilingual-lm/BilingualLM.cpp</name>
 			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/FF/bilingual-lm/BilingualLM.cpp</locationURI>
+			<locationURI>PARENT-1-ECLIPSE_HOME/github/mosesdecoder/moses/LM/bilingual-lm/BilingualLM.cpp</locationURI>
 		</link>
 		<link>
-			<name>FF/bilingual-lm/BilingualLM.h</name>
+			<name>LM/bilingual-lm/BilingualLM.h</name>
 			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/FF/bilingual-lm/BilingualLM.h</locationURI>
+			<locationURI>PARENT-1-ECLIPSE_HOME/github/mosesdecoder/moses/LM/bilingual-lm/BilingualLM.h</locationURI>
 		</link>
 		<link>
 			<name>LM/oxlm/LBLLM.cpp</name>
