--- a/contrib/other-builds/moses/.project
+++ b/contrib/other-builds/moses/.project
@@ -2032,14 +2032,14 @@
 			<locationURI>PARENT-1-ECLIPSE_HOME/github/mosesdecoder/moses/LM/bilingual-lm/BilingualLM.h</locationURI>
 		</link>
 		<link>
-			<name>LM/oxlm/LBLLM.cpp</name>
+			<name>LM/oxlm/OxLM.cpp</name>
 			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/LM/oxlm/LBLLM.cpp</locationURI>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/LM/oxlm/OxLM.cpp</locationURI>
 		</link>
 		<link>
-			<name>LM/oxlm/LBLLM.h</name>
+			<name>LM/oxlm/OxLM.h</name>
 			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/LM/oxlm/LBLLM.h</locationURI>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/LM/oxlm/OxLM.h</locationURI>
 		</link>
 		<link>
 			<name>LM/oxlm/Mapper.cpp</name>
