separate out class TranslationTask into it's on file

--- a/contrib/other-builds/moses-cmd/.project
+++ b/contrib/other-builds/moses-cmd/.project
@@ -107,6 +107,16 @@
 			<locationURI>PARENT-3-PROJECT_LOC/moses-cmd/Main.h</locationURI>
 		</link>
 		<link>
+			<name>TranslationTask.cpp</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses-cmd/TranslationTask.cpp</locationURI>
+		</link>
+		<link>
+			<name>TranslationTask.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses-cmd/TranslationTask.h</locationURI>
+		</link>
+		<link>
 			<name>mbr.cpp</name>
 			<type>1</type>
 			<locationURI>PARENT-3-PROJECT_LOC/moses-cmd/mbr.cpp</locationURI>
