working multi-threaded filter pt, one thread per split file

--- a/contrib/sigtest-filter/Makefile
+++ b/contrib/sigtest-filter/Makefile
@@ -11,4 +11,4 @@ filter-pt: filter-pt.cpp
 
 filter-pt-mt: filter-pt-mt.cpp
 	./check-install $(SALMDIR)
-	$(CXX) -O6 $(INC) $(OBJS) -o filter-pt-mt filter-pt-mt.cpp -lboost_thread
+	$(CXX) -O6 $(INC) $(OBJS) -o filter-pt-mt filter-pt-mt.cpp -lboost_thread -lboost_iostreams -lboost_system
